--- a/src/app/stay/stay.css
+++ b/src/app/stay/stay.css
@@ -80,7 +80,8 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
     width: 100%;
-    justify-items: center;
+    align-items: stretch;
     box-sizing: border-box;
   }
+  
   
